infra/main.tf
data "google_compute_network" "default" {
  name = var.network_name
}

data "google_compute_image" "ubuntu" {
  family  = "ubuntu-2404-lts-amd64"
  project = "ubuntu-os-cloud"
}

resource "google_compute_firewall" "allow_ssh" {
  name    = "${var.instance_name}-allow-ssh"
  network = data.google_compute_network.default.self_link

  direction     = "INGRESS"
  source_ranges = ["0.0.0.0/0"]
  target_tags   = [var.network_tag]

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
}

resource "google_compute_firewall" "allow_http" {
  name    = "${var.instance_name}-allow-http"
  network = data.google_compute_network.default.self_link

  direction     = "INGRESS"
  source_ranges = ["0.0.0.0/0"]
  target_tags   = [var.network_tag]

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }
}

resource "google_compute_firewall" "allow_https" {
  name    = "${var.instance_name}-allow-https"
  network = data.google_compute_network.default.self_link

  direction     = "INGRESS"
  source_ranges = ["0.0.0.0/0"]
  target_tags   = [var.network_tag]

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
}

resource "google_compute_firewall" "allow_kube_apiserver" {
  name    = "${var.instance_name}-allow-kube-apiserver"
  network = data.google_compute_network.default.self_link

  direction     = "INGRESS"
  source_ranges = ["0.0.0.0/0"]
  target_tags   = [var.network_tag]

  allow {
    protocol = "tcp"
    ports    = ["6443"]
  }
}

resource "google_compute_instance" "vps" {
  name         = var.instance_name
  machine_type = var.machine_type
  zone         = var.zone

  tags = [var.network_tag]

  boot_disk {
    initialize_params {
      image = data.google_compute_image.ubuntu.self_link
      size  = var.boot_disk_size_gb
      type  = var.boot_disk_type
    }
  }

  network_interface {
    network = data.google_compute_network.default.self_link

    # Ephemeral external IPv4.
    access_config {}
  }

  depends_on = [
    google_compute_firewall.allow_ssh,
    google_compute_firewall.allow_http,
    google_compute_firewall.allow_https,
    google_compute_firewall.allow_kube_apiserver,
  ]
}

module "dns" {
  source = "./modules/dns"
  domain = var.domain
  subdomain = var.subdomain
  ip     = google_compute_instance.vps.network_interface[0].access_config[0].nat_ip
}
